@@ -16,6 +16,10 @@ Revision history for Perl extension App::Sqitch
        increments between logging changes to the registry until the time has
        ticked over to the next second. Naturally, reverts and deploys will be
        a little slower on versions of MySQL before 5.6.4, but accurate.
+     - Added a script to update the `DATETIME` columns in a MySQL Sqitch
+       registry that was upgraded to MySQL 5.6.4 or higher. It will be
+       installed as `tools/upgrade-registry-to-mysql-5.6.4.sql` in the
+       directory returned by `sqitch --etc`.
 
 0.999  2015-02-12T19:43:45Z
      - Improved MySQL missing table error detection by relying on error codes
